tests/codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.arithmetic.no.args/rt_codegen_err_arithmetic_no_args.mon
;; TEST-ID: tests.codegen.rt-codegen-err-arithmetic-no-args
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.arithmetic.no.args
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: compile-fail
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen rejects arithmetic forms without operands.
;; TEST-ATOM: (+) must fail because arithmetic operators need at least one argument.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/compile-fail branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.arithmetic.no.args
;; TEST-MENU-PATH: codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.arithmetic.no.args
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.arithmetic.no.args
;; TEST-CLI-TARGET: codegen errors codegen compile-fail
(module Main)
(show (+))
